<resources>
    <string name="app_name" translatable="false">EcoApp</string>
    <string name="invalid_email_not_pattern">Not a valid email</string>
    <string name="invalid_password_too_short">Password must be >5 characters</string>
    <string name="invalid_fields">One of the all fields is not a valid</string>
    <string name="invalid_nick_name_is_blank">Not a valid nick name</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_second_name">Second name</string>
    <string name="hint_nick_name">Nick name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_registration">Registration</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="import_from_gallary">Import from gallary</string>
    <string name="btn_cancel">Cancel</string>
    <string name="create_from_camera">Create from camera</string>
    <string name="image">Image</string>
    <string name="title_edit">Edit</string>
    <string name="text_edit_email">email</string>
    <string name="btn_save">Save</string>
    <string name="text_edit_old_password">Old password</string>
    <string name="text_edit_new_password">New password</string>
    <string name="text_edit_nickname">Nick name</string>
    <string name="invalid_email_similar_old_email">New email can\'t be old email</string>
    <string name="invalid_old_password_not_old">Not old password</string>
    <string name="invalid_new_password_is_old">New password can\'t be old</string>
    <string name="invalid_nick_name_is_old">new nickname can\'t be old</string>
    <string name="type_paper">Paper</string>
    <string name="type_glass">Glass</string>
    <string name="type_plastic">Plastic</string>
    <string name="type_metal">Metal</string>
    <string name="invalid_title_is_blank">Not a valid title</string>
    <string name="invalid_title_too_short">title Length must be more than 10 chars</string>
    <string name="invalid_address_is_blank">Not a valid address</string>
    <string name="invalid_address_too_short">Address length must be more than 10 chars</string>
    <string name="invalid_types">At least one type must be selected</string>
    <string name="what_is_trash_paper">Office paper, newspapers, magazines, catalogs. Cardboard, paper for drawing without varnish, glitter. Paper clean packaging from products.</string>
    <string name="what_is_trash_glass">Glass containers, that is, glass bottles and cans. Cullet-broken glass containers.</string>
    <string name="what_is_trash_plastic">All types of plastic marked 01 PET and 02 HDPE. Plastic labels 04 LDPE, 05 PP, 06 PS are more difficult to recycle, so they are not accepted at all points.</string>
    <string name="what_is_trash_metal">Aluminum and beverage cans, lids, and other all-metal items.</string>
    <string name="what_is_not_trash_paper">Paper cups, disposable paper dishes. Greasy, dirty, and other damaged paper. baking paper, receipts, foil paper, and photos</string>
    <string name="what_is_not_trash_glass">Medicine cans, light bulbs, car windows, and window panes. Ceramic, earthenware and porcelain products.</string>
    <string name="what_is_not_trash_plastic">Plastic bottles are matte and bright colors due to the presence of dyes in them. Containers for vegetable and machine oils.</string>
    <string name="btn_is_favorite">Delete</string>
    <string name="btn_is_not_favorite">Save</string>
    <string name="distance_kilometers">km</string>
    <string name="distance_meters">m</string>
    <string name="title_settings">Settings</string>
    <string name="invalid_nick_name_not_pattern">Nickname must be contains only lat chars or \'-\',\'_\'</string>
    <string name="invalid_user_name_is_blank">Not valid username</string>
    <string name="invalid_user_name_not_patterns_or_both">Username must be contains only lat or kir symbols</string>
    <string name="invalid_password_is_blank">Not a valid password</string>
    <string name="invalid_password_not_pattern">Password must be contains only lat chars or symbols \'@\',\'?\',\'#\',\'%\',\'-\',\'_\'</string>
    <string name="invalid_title_not_patterns_or_both">Title must be contains only lat or kir chars or \'\'\',\' \'</string>
    <string name="invalid_address_not_patterns_or_both">Address must be contains only lat or kir chars or \',\',\'.\',\' \'</string>
    <string name="error_user_not_near_marker">you can only visit the place at a distance of 20 meters</string>
    <string name="successful_visited_marker">You successful visited this place</string>
    <string name="btn_auth">Email authitication</string>
    <string name="title_guide">guides</string>
    <string name="title_map">map</string>
    <string name="title_profile">profile</string>
    <string name="hint_title">title</string>
    <string name="hint_address">address</string>
    <string name="btn_confirm">Confirm</string>
    <string name="score">score</string>
    <string name="position">position</string>
    <string name="menu_edit_nick_name">Edit nickname</string>
    <string name="menu_edit_email">Edit email</string>
    <string name="menu_edit_password">Edit password</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_edit_delete_user">Delete account</string>
    <string name="all_search">All</string>
    <string name="fav_search">Favorite</string>
    <string name="rating">Rating</string>
    <string name="what_is_trash">What is to be disposed of?</string>
    <string name="what_is_not_trash">Undesirable for disposal</string>
    <string name="what_is_not_trash_metal">Plastic packaging with a metallized layer and foil. Gas cylinders and potentially dangerous products.</string>
    <string name="place_was_visited_earlier">This place was visited earlier</string>
    <string name="invalid_registration">Registration failed</string>
    <string name="invalid_login">Login failed</string>
    <string name="invalid_update_email">Email wasn\'t  updated</string>
    <string name="invalid_update_nick_name">Nickname wasn\'t  updated</string>
    <string name="invalid_update_password">Password wasn\'t  updated</string>
    <string name="update_email">Email was updated</string>
    <string name="update_nick_name">Nickname was updated</string>
    <string name="update_password">Password was  updated</string>
</resources>