<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_frag_btn_change_nickname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/settings_frag_text_change_nickname"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toStartOf="@+id/settings_frag_text_change_nickname"
                app:layout_constraintTop_toTopOf="@+id/settings_frag_text_change_nickname"
                app:srcCompat="@drawable/nick_name_setting_icon" />

            <TextView
                android:id="@+id/settings_frag_text_change_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/menu_edit_nick_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/cardview_nickname"
        app:layout_constraintStart_toStartOf="@+id/cardview_nickname"
        app:layout_constraintTop_toBottomOf="@+id/cardview_nickname">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_frag_btn_change_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/settings_frag_text_change_email"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toStartOf="@+id/settings_frag_text_change_email"
                app:layout_constraintTop_toTopOf="@+id/settings_frag_text_change_email"
                app:srcCompat="@drawable/email_setting_icon" />

            <TextView
                android:id="@+id/settings_frag_text_change_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/menu_edit_email"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/cardview_email"
        app:layout_constraintStart_toStartOf="@+id/cardview_email"
        app:layout_constraintTop_toBottomOf="@+id/cardview_email">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_frag_btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/settings_frag_text_change_password"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toStartOf="@+id/settings_frag_text_change_password"
                app:layout_constraintTop_toTopOf="@+id/settings_frag_text_change_password"
                app:srcCompat="@drawable/password_setting_icon" />

            <TextView
                android:id="@+id/settings_frag_text_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/menu_edit_password"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_sign_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/cardview_password"
        app:layout_constraintStart_toStartOf="@+id/cardview_password"
        app:layout_constraintTop_toBottomOf="@+id/cardview_password">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_frag_btn_sign_out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                android:rotation="180"
                app:layout_constraintBottom_toBottomOf="@+id/settings_frag_text_sign_out"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toStartOf="@+id/settings_frag_text_sign_out"
                app:layout_constraintTop_toTopOf="@+id/settings_frag_text_sign_out"
                app:srcCompat="@drawable/sign_out_setting_icon" />

            <TextView
                android:id="@+id/settings_frag_text_sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/menu_sign_out"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_delete_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/cardview_sign_out"
        app:layout_constraintStart_toStartOf="@+id/cardview_sign_out"
        app:layout_constraintTop_toBottomOf="@+id/cardview_sign_out">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_frag_btn_delete_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <TextView
                android:id="@+id/settings_frag_text_delete_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/menu_edit_delete_user"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>